# radiorecord-tui

./: .gitignore  Cargo.toml  LICENSE  readme.md
data/: ascii.json  fav.json
src/: api.rs  app.rs  config.rs  main.rs  mpris.rs  player.rs  tools.rs  ui.rs
