[package]
name = "radiorecord-tui"
description = "A simple terminal interface for listening to radio record web stations"
homepage = "https://gitlab.com/vandechat96/radiorecord-tui"
#documentation = "https://gitlab.com/vandechat96/radiorecord-tui"
repository = "https://gitlab.com/vandechat96/radiorecord-tui"
readme = "readme.md"
license-file = "LICENSE"
keywords = ["radiorecord", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
authors = ["Jika"]
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8"
crossterm = { version = "0.24", features = ["serde"] }
tui = { version = "0.18", default-features = false, features = [
    'crossterm',
    'serde',
] }
thiserror = "1.0"
clap = "3.1"

rodio = { git = "https://github.com/RustAudio/rodio", default-features = false, features = [
    'symphonia-aac',
] }
libmpv = { version = "2.0", features = ["default"] }

curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dirs-next = "2.0.0"
asciifyer = { version = "0.1.1" }

tokio = { version = "1", features = ["full"] }
zbus = { version = "2", default-features = false, features = ["tokio"] }
crossbeam = "0.8"

[features]
default = ["libmpv_player"]
libmpv_player = []
rodio_player = []

[[bin]]
bench = false
path = "src/main.rs"
name = "rrt"
