[package]
name = "radiorecord-tui"
description = "A simple terminal interface for listening to radio record web stations"
homepage = "https://gitlab.com/vandechat96/radiorecord-tui"
#documentation = "https://gitlab.com/vandechat96/radiorecord-tui"
repository = "https://gitlab.com/vandechat96/radiorecord-tui"
readme = "readme.md"
license-file = "LICENSE"
keywords = ["radiorecord", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
authors = ["Jika"]
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
thiserror = "1.0"
rand = "0.8"
crossterm = { version = "0.27", features = ["serde"] }
tui = { package="ratatui", version = "0.26", default-features = false, features = [
    'crossterm',
    'serde',
] }
tui-input = "0.8"
clap = { version="4.3", features=["derive", "color"] }

rodio = { version = "0.18", default-features = false, features = [
    'symphonia-aac',
],optional = true }
libmpv = { git = "https://github.com/ParadoxSpiral/libmpv-rs", features = ["default"], optional = true }

curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

dirs-next = "2.0.0"
image="0.25"

tokio = { version = "1", features = ["full"] }
zbus = { version = "4.2", default-features = false, features = ["tokio"] }
crossbeam = "0.8"

[profile.dev.package.backtrace]
opt-level = 3

[features]
default = ["libmpv_player"]
libmpv_player = ["libmpv"]
rodio_player = ["rodio"]

[[bin]]
bench = false
path = "src/main.rs"
name = "rrt"
